--- a/files/스캔.md
+++ b/files/스캔.md
@@ -1,7 +1,30 @@
-### Plex Media Scanner
+### 중요 : FF 도커 실행시
+  * 참고 : [데브닉스님 글](https://sjva.me/bbs/board.php?bo_table=tip&wr_id=8397)
+  * `socat` 을 설치
+    ```
+    # terminal 플러그인으로 터미널 접속
+    apt-get update
+    apt-get install -y socat  
+    ```
+
+  * 시스템 툴 - Command에 시작시 한번 실행으로 명령 등록
+
+    * Plex가 Host Native 인 경우
+    ```
+    socat TCP-LISTEN:32400,reuseaddr,fork TCP:172.17.0.1:32400 & > /dev/null
+    ```
+
+    * Plex가 Docker인 경우
+    도커 이름 혹은 IP  
+    ```
+    socat TCP-LISTEN:32400,reuseaddr,fork TCP:plex:32400 & > /dev/null
+    ```
+  
+  * 스샷  
+  <img src="https://cdn.discordapp.com/attachments/973582802102648882/1043833573351891004/image.png" width="100%" />
 
 
-##### 개요
+### Plex Scanner
 
  윈도우에서는 user가 문제되지 않지만 리눅스에서는 Plex 서버 구동을 하는 user에 따라 문제가 발생할 수 있다.  
  plex docker는 UID/GID를 root로 하면 마찬가지로 문제가 없지만 plex native 처럼 plex:plex USER를 사용하는 경우 "Plex Media Scanner"를 root로 실행하는 것은 가급적 피해야 한다.
@@ -73,25 +96,3 @@ root가 su를 통해 plex user로 명령 실행.
     `/usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --analyze --item 366909`
 
 
-
-### 중요 : FF 도커 실행시
-  * 참고 : [데브닉스님 글](https://sjva.me/bbs/board.php?bo_table=tip&wr_id=8397)
-
-
-  * Plex가 Host Native 인 경우
-  ```
-  # terminal 플러그인으로 터미널 접속
-  apt-get update
-  apt-get install -y socat
-  socat TCP-LISTEN:32400,reuseaddr,fork TCP:172.17.0.1:32400 & > /dev/null
-  ```
-
-  * Plex가 Docker인 경우
-  도커 이름 혹은 IP  
-
-  ```
-  # terminal 플러그인으로 터미널 접속
-  apt-get update
-  apt-get install -y socat
-  socat TCP-LISTEN:32400,reuseaddr,fork TCP:plex:32400 & > /dev/null
-  ```
