--- a/files/파일정리.md
+++ b/files/파일정리.md
@@ -1,147 +1,68 @@
+### 라이브러리 정리
+#### 배경
+  수십 GB를 차지하는 Metadata, Media 폴더는 오직 썸네일 때문에 필요하다.  (쇼 테마음악도 포함하나 설명시 제외)  
+  DB 파일을 열어보면 `metadata_items` 테이블에서 `user_thumb_url`, `user_art_url` 컬럼이 있고 여기서 `metadata://`, `media://` 스키마인 경우에 해당된다.  
+  이 스키마를 모두 http로 변경하면 두 폴더는 없어도 된다.  
+  정리 모듈은 단계별로 http로 바꾸고 두 폴더 내의 파일을 지우는 기능을 하지만, 그냥 두 폴더를 삭제해도 Plex 구동에는 아무 문제 없으니 복잡한게 싫다면 http로 변경된 것을 확인하고 폴더를 삭제해도 무방하며 사라진 폴더는 메타 새로고침, 분석 등에 의해서 다시 만들어진다.
 
-### TV쇼 4단계 정리
-
-기능추가 : 2021-11-01
-
-
-PLEX는 TV쇼 에피소드 썸네일을 메타 사이트에서 제공하지 않는 경우 분석에 의해 생성된 썸네일 파일을 사용한다. 4단계는 이런 경우 생성된 이미지 파일을 디스코드에 업로드하여 http URL로 변경하여 DB 저장한 후 로컬에 있는 썸네일 파일을 삭제한다.
-
-쎔네일 파일이 워낙 작기 때문에 용량 감소는 그리 크지 않다.  
-다만 DB복사시에 전에는 검은 화면이 나온 반면 이제는 디스코에 올라간 이미지를 바로 사용할 수 있다. 
-
-- 디스코드 업로드 과정이 있기 때문에 조금 더 오래 걸림.
-- 동시에 여러 곳에서 이 정리를 할 경우 디스코드 제한에 걸릴 수 있음.
-  DB 툴을 이용하여 media 썸네일이 없는지 확인하여 재실행이 필요 할 수 있음.
-
-
-- ** 1. F 외국 4단계 정리 **   
-  전체크기는 /Metadata 폴더 기준이고 삭제크기는 /Media 파일 포함이라 지금은 더 크게 나오는 상태.  
-  미디어 파일 대략 600메가 정도 삭제
-  ![](https://cdn.discordapp.com/attachments/631112094015815681/904711508070645790/unknown.png)
-
+##### http로 바꾸는 방법
+  1. 메타 사이트가 제공하는 URL을 바로 사용한다.  
+    - plex agent는 이 url을 통해 파일을 다운로드하여 Metadata 폴더에 저장하기 떄문에 용량이 증가한다.
+    - 이 URL을 바로 사용하게 되면 로컬 파일은 필요없다.
+    - 로컬 파일도 어짜피 캐시로 변환하고 캐시파일만 사용하기 떄문에 캐시 만들때 사용하는 것 말고 사용되지 않는다. (컬렉션 만들때도 사용)
+    - 최초 접속시에는 http로 다시 가져와야 하기 떄문에 약간 느리나, 가져온 파일을 캐시파일로 변환하여 사용하기 때문에 로컬 파일과 차이가 없다.
   
-- ** 2. DB 툴에서 여전히 Media로 시작하는 것들 검색 **  
-  약 50개 정도 찾음.   
-  대부분 분석이 안되었거나 도중에 중단된 경우로 Media 폴더에 파일이 없는 경우.
-  ![](https://media.discordapp.net/attachments/631112094015815681/904714395899285554/unknown.png)
-
-
-- ** 썸네일 없음 **
-![](https://cdn.discordapp.com/attachments/631112094015815681/904714893314371665/unknown.png)
-
-- ** 클릭 후 팝업 메뉴에서 분석 실행 **
-![](https://media.discordapp.net/attachments/631112094015815681/904715366566092830/unknown.png)
-
-- ** 분석 후 썸네일 표시 **
-![](https://media.discordapp.net/attachments/631112094015815681/904715566764421160/unknown.png)
-
-- ** 파일 시스템에서도 파일 생성 확인 **
-![](https://cdn.discordapp.com/attachments/631112094015815681/904715737011216424/unknown.png)
-
-
-- ** 3. 2회차 실행 **  
-![](https://media.discordapp.net/attachments/631112094015815681/904717652541448203/unknown.png)
-
-- ** 4. 이후 다시 DB 확인 **  
-media:// 이미지 경로 없음.
-![](https://media.discordapp.net/attachments/631112094015815681/904717307333468180/unknown.png)
-
-
-- ** 이 상태에서 복사용 DB 파일 생성하고 사용시 비어있는 에피소드 썸네일이 없음. **
-
-
-
-
-
-
-----
-
-### 배경지식
-----
-  * Plex는 여러 Agent가 메타 생성에 기여할 수 있음
-
-  * 메타 우선순위이며 LocalMedia가 메인 에이전트보다 높은 순위에 있는 경우    
-    영상 파일내의 Tag에 있는 제목이 우선순위에 따라 먼저 선택됨. (흔한 제목이 이상해요 하는 질문)
-
-  * 포스터, 아트 등도 마찬가지로 여러 에이전트들이 썸네일 혹은 원본을 파일로 저장함.
-
-  * 메타별 _comined 폴더가 있고 이 폴더는 각 에이전트 우선순위에 따른 최종 결과값(xml) 및 이미지 파일 링크 저장
-
-  * 메타별 _stored 폴더가 있고 이미 받은 파일을 다시 받거나, 포스터 선택시 저장됨.
-
-  * _combined 폴더는 A, B 에이전트나 _stored 폴더로의 링크임   
-    윈도우는 링크가 아닌 동일 파일을 복사하여 가지고 있으므로 무조건 하나의 이미지가 2~3개씩 있음
+  2. http가 제공되지 않을 때 로컬 파일을 디스코드에 업로드 한 http를 사용한다.
+    - 메타가 제공되지 않을 때는 분석에 의해 만들어진 Media내 파일을 사용한다.
+    - 영화의 Art, 에피소드의 Poster등이 해당된다.
   
-  * ** 1단계 - 사용하지 않는 이미지 파일을 삭제 **   
-    A, B 에이전트에서 포스터 5개씩 제공한다면 해당 이미지에 대한 썸네일(지원시) 혹은 원본을 파일로 저장해 놓고 있고 
-    사용자가 포스터 선택할 때 보여줌.    
-    이 파일들을 지운다 하더라도 메타새로고침하면 다시 가져오기 때문에 보관할 필요가 없음.   
-    1단계는 이런 현재 사용하지 않는 이미지 파일을 찾아서 지움   
+    
+
+#### 공통
+  - 한 번에 모두 정리되지 않는다. 여러 번 반복해야한다.  
+    가장 큰 이유는 DB update가 한 번에 모두 된다는 보장이 없다.
+    Plex DB가 sqlite3이기 때문이며 plex 기능만 사용할 때도 database is locked 메시지는 빈번하게 나온다. 그래서 가능하면 Plex가 아무 것도 하지 않을 때 작업을 하는게 좋다.
+  - 마지막 단계는 이전 단계를 모두 처리한다.
+  - DB - Select에서 `Poster가 없거나 http아닌 경우`, `Art가 없거나 http가 아닌 경우` 모두 검색 결과가 나오지 않는 상태가 정리 완료된 상태이다.
+  - 로그 화면을 펼쳐서 나오는 메시지를 확인한다. 메타 새로고침을 수동으로 하거나 분석이 필요한 경우 로그가 나온다.
+
+
+#### 라이브러리 정리 단계
+  * 1단계 - 사용하지 않는 이미지 파일을 삭제
+    A, B 에이전트에서 포스터 5개씩 제공한다면 해당 이미지에 대한 썸네일(지원시) 혹은 원본을 파일로 저장해 놓고 있고 사용자가 포스터 선택할 때 보여준다.
+    이 파일들을 지운다 하더라도 메타새로고침하면 다시 가져오기 때문에 보관할 필요가 없고 1단계는 이런 현재 사용하지 않는 이미지 파일을 찾아서 지운다.
     약 50% 이상 용량 감소
 
-  * 이런 메타이미지, 메타가 없는 경우 미디어 이미지는 db에 아래 정보로 저장됨   
-    user_thumb_url : 포스터, 에피소드 썸네일   
-    user_art_url : 배경   
-    user_banner_url : 배너   
-    user_music_url : 테마음악   
-  
-  * 저장 스키마는 보통 아래형식임.   
-    미디어 이용(분석시 생성된 썸네일) : media://8/a326fbf09a1354a7740e0d8d0555050eeaad338.bundle/Contents/Thumbnails/thumb1.jpg   
-    메타이용 : metadata://seasons/1/episodes/1/thumbs/com.plexapp.agents.sjva_agent_9e2ec577efcf231ce5ce1ba198b89bcd49d1fc87
-  
-  * 에이전트로는 metadata:// 스키마밖에 사용할 수 없지만 DB 직접 조작을 통해 이미지 주소를 넣으면 로컬 이미지를 사용하지 않고 http로 바로 이미지를 사용가능함.
-  
-  * Plex 유저폴더 / Cache / PhotoTranscoder 폴더가 있음.   
-    이 폴더가 Plex 용량 증가의 주 원인이며 따로 지워주지 않는다면 계속 용량이 증가함.   
-    모두 지워도 되며 캐시가 없다면 어짜피 다시 만듬
-
-  * metadata:// 사용 - 로컬에 있는 이미지 파일 사용   
-    http:// 사용 - 메타제공사이트에 있는 이미지 파일 사용   
-    위 두 방식 모두 어짜피 PhotoTranscoder 에 캐시를 만들어 사용함.   
-    로컬에 있는 파일로 만드냐 메타사이트에 있는 파일로 만드냐의 차이이며 약간의 속도차이는 나나 유의미하지 않음.
-
-  * ** 2단계 **   
+  * 2단계
     선택된 파일(현 포스터, 아트 등)에 대한 메타사이트 측 URL이 있다면 이미지 파일을 지우고 DB에 http 값을 넣어줌.   
-    메타데이터 폴더에는 xml 파일만 남게 되어 보통 1G를 넘지 않음   
-    99% 용량 감소
+    메타데이터 폴더에는 xml 파일만 남게 되어 보통 1G를 넘지 않음. 99% 용량 감소
 
-  * Plex는 미디어 파일 분석시 모든 파일에 대한 썸네일을 생성.   
-    예전 TV 프로그램 같이 에피소드별 썸네일 메타가 없는 경우 이런 파일들을 사용함.
-
-  * ** 3단계 **   
+  * 3단계
     http 사용이 확정된 경우 media 분석시 생성한 썸네일 이미지도 삭제함.   
     분석시 생성한 파일의 크기가 원래 작기 때문에 그렇게 큰 용량 차이는 나지 않음
 
-  
-  * 반드시 DB 백업 후 사용
+  - 4단계 : art가 media인 경우 discord URL로 변경하고 media를 삭제  
+    보통 영화는 poster는 거의 다 있지만 art는 그렇지 않다.  
+    plex는 art가 없는 경우 특정시점의 영상의 썸네일을 만들어 media에 저장하고 그것을 art로 사용하는데 이 파일을 http로 변경한다.  
 
-  * 충분히 테스트 한 후 적용   
-    config.yaml 에서 쿼리 WHERE 조건을 추가하여 테스트
-  
-  * 간혹 썸네일이 안 보이는 경우가 있음.   
-    보통 메타 구축 상태가 도중에 중단되는 경우로 보임   
-    다시 메타새로고침 후 파일정리 이용
-  
-  * 지운 메타는 새로고침 할때마다 다시 다운로드 받아 저장함..   
-    따라서 빈번하게 업데이트 되는 방송중 섹션 같은 곳은 적용할 필요 없음. (테스트 용이)
 
 ----
-  
-  * 컬렉션 표지는 로컬파일만으로 만들기 때문에 2단계 적용시 나타나지 않음.  
-    컬렉션 내부에서의 표시는 문제 없음
-  
-  * 주로 메타데이터 정리를 많이 할텐데 알아두고 적용하길 바람.  
-    동일 작품, 동일 에이전트 사용시 같은 hash임
-    예) GDS 최신을 라이브러리화 해서 '블랙 위도우' 가 있음.  
-    본인만의 최신 영화 라이브러리에도 '블랙 위도우'를 추가  
-    둘다 에이전트는 SjvaAgent 사용한다면 두 개는 동일한 hash임으로 같은 메타데이터 폴더를 사용.  
-    (파일 위치가 다르다면 미디어 폴더를 다르지만 같은 파일이면 미디어도 같음)  
-    이 상태에서 GDS 섹션 2단계를 수행하면 이미지 파일을 모두 날리기 때문에 본인 최신라이브러리에서는 이미지가 안뜸.  
-    GDS에서 메타새로고침하면 다시 뜸.  TV도 마찬가지. 
+### 번들 삭제
 
-  * 스캔기능은 Plex에서의 경로와 Sjva에서의 경로가 같아야 함.  
-    예) 호스트 /mnt/aaa에 마운트  
-    Plex native라면 바로 사용할테고, 도커 Sjva는 -v /:/host 가 있다면 /host/mnt/aaa로 접근됨.  이걸 다시 sjva 내부에서 ln -s /host/mnt/aaa /mnt/aaa로 링크하여 Plex와 경로 일치.
+  - 1단계 : hash에 DB가 없는 경우 삭제  
+    * Media : 빈 폴더 삭제
+  - 2단계
+    - TV Shows: 시즌, 에피 폴더 삭제
+  - 3단계
+    - TV Shows, Movie: 폴더 탐색하여 안쓰는 파일 삭제. 빈 폴더 삭제
+
+  영화, 쇼 bundle은 포스터 URL이라도 있지만 시즌, 에피소드 번들은 쓰는 경우가 아예 없고 지워도 상관없다.
+  비어 있는 폴더가 아주 많고 이 폴더를 지울 경우 상당한 용량을 확보할 수 있다.
 
 
-  
+----
+### 캐시(PhotoTranscoder) 삭제
+  Plex는 모든 이미지 파일을 이 폴더안에 캐시로 만들어 사용하고 같은 이미지 파일이라도 클라이언트에 따라 여러 개를 만들어 사용한다.  
+  이 폴더는 최대 용량이 제한되거나, 오래된 파일을 삭제하거나 하지 않아 100 GB 이상을 넘어 갈수도 있다.
+  전체를 삭제하더라고 접속시 약간 이미지가 늦게 뜰뿐 어짜피 다시 만들기 때문에 수시로 삭제해도 무방하다.
+
