--- a/files/라이브러리 주기적 스캔.md
+++ b/files/라이브러리 주기적 스캔.md
@@ -1,5 +1,8 @@
 ### 라이브러리 주기적 스캔
-----
+
+섹션별, 또는 하위 폴더별로 주기적 스캔을 하는 기능이다
+
+
 
 ![](https://cdn.discordapp.com/attachments/631112094015815681/902644120697339914/unknown.png)
 
