--- a/files/파일정리.md
+++ b/files/파일정리.md
@@ -66,3 +66,81 @@
   이 폴더는 최대 용량이 제한되거나, 오래된 파일을 삭제하거나 하지 않아 100 GB 이상을 넘어 갈수도 있다.
   전체를 삭제하더라고 접속시 약간 이미지가 늦게 뜰뿐 어짜피 다시 만들기 때문에 수시로 삭제해도 무방하다.
 
+
+----
+### 자동화
+
+주기적으로 자동실행을 원할 경우 아래 코드를 본인 환경에 맞게 수정 한 후 Command 에서 `LOAD` 방식으로 등록하여 사용한다.
+
+```python
+import json
+import os
+import sys
+import traceback
+
+logger = None
+########################################################################## 이 위 고정
+
+
+# 진입점
+def run(*args, **kwargs):
+    from framework import F
+    P = F.PluginManager.get_plugin_instance('plex_mate')
+    module = P.logic.get_module('clear')
+    
+    # 영화정리
+    page_movie = module.get_page('movie')
+    # 단계, 섹션 ID, dryrun
+    page_movie.task_interface('start4', '23', 'false').join()
+    page_movie.task_interface('start4', '64', 'false').join()
+
+    # 쇼 정리
+    page_show = module.get_page('show')
+    page_show.task_interface('start4', '8', 'false').join()
+    page_show.task_interface('start4', '9', 'false').join()
+    
+    # 번들 정리
+    page_bundle = module.get_page('bundle')
+    # 타입, 메타타입, 하위폴더(all이면 전체), dryrun, 단계
+    page_bundle.task_interface('Metadata', 'TV Shows', 'all', 'false', 'step3').join()
+    page_bundle.task_interface('Metadata', 'Movie', '0', 'false', 'step3').join()
+    page_bundle.task_interface('Media', '', '1', 'false', 'step3').join()
+
+        
+
+########################################################################## 이 아래 고정
+def main(*args, **kwargs):
+    global logger
+    if 'logger' in kwargs:
+        logger = kwargs['logger']
+    log('=========== SCRIPT START ===========')
+    ret = run(*args, **kwargs)
+    log('=========== SCRIPT END ===========')
+    return ret
+
+def log(*args):
+    try:
+        if logger is not None:
+            logger.debug(*args)
+        if len(args) > 1:
+            print(args[0] % tuple([str(x) for x in args[1:]]))
+        else:
+            print(str(args[0]))
+        sys.stdout.flush()
+    except Exception as e:
+        print('Exception:%s', e)
+        print(traceback.format_exc())
+
+
+def d(data):
+    if type(data) in [type({}), type([])]:
+        import json
+        return '\n' + json.dumps(data, indent=4, ensure_ascii=False)
+    else:
+        return str(data)
+
+
+if __name__== "__main__":
+    main()
+
+```
