--- a/files/스캔.md
+++ b/files/스캔.md
@@ -1,31 +1,32 @@
-### 중요 : FF 도커 브릿지모드
-  아래 `socat` 을 이용해도 스캔이 되지 않는 문제 확인를 확인하였다.  
-  해결책을 당장 찾기 힘들어 스캔 기능을 이용하려면 FF 도커를 호스트 모드로 실행하길 권장한다.  
+### ~~중요 : FF 도커 브릿지모드~~
+  ~~아래 `socat` 을 이용해도 스캔이 되지 않는 문제 확인를 확인하였다.~~  
+  ~~해결책을 당장 찾기 힘들어 스캔 기능을 이용하려면 FF 도커를 호스트 모드로 실행하길 권장한다.~~
   ```
   docker run -d --name ff --network=host  -v /root/docker/ff2:/data -v /:/host -v /mnt:/mnt --privileged flaskfarm/flaskfarm:4.0
   ```
-  `config.yaml` 파일에서 `port: 7777` 와 같이 원하는 포트를 지정하여 실행.
+  ~~`config.yaml` 파일에서 `port: 7777` 와 같이 원하는 포트를 지정하여 실행.~~
 
 <br>
 <br>
 
-### ~~중요 : FF 도커 실행시~~
-  * ~~참고 : [데브닉스님 글](https://sjva.me/bbs/board.php?bo_table=tip&wr_id=8397)~~
-  * ~~`socat` 을 설치~~
+### 중요 : FF 도커 네트워크 모드 브릿지 실행시
+##### socat 세팅
+  * 참고 : [데브닉스님 글](https://sjva.me/bbs/board.php?bo_table=tip&wr_id=8397)
+  * `socat` 을 설치
     ```
     # terminal 플러그인으로 터미널 접속
     apt-get update
     apt-get install -y socat  
     ```
 
-  * ~~시스템 툴 - Command에 시작시 한번 실행으로 명령 등록~~
+  * 시스템 툴 - Command에 시작시 한번 실행으로 명령 등록~~
 
-    * ~~Plex가 Host Native 인 경우~~
+    * Plex가 Host Native 인 경우
     ```
     socat TCP-LISTEN:32400,reuseaddr,fork TCP:172.17.0.1:32400 & > /dev/null
     ```
 
-    * ~~Plex가 Docker인 경우~~
+    * Plex가 Docker인 경우
     도커 이름 혹은 IP  
     ```
     socat TCP-LISTEN:32400,reuseaddr,fork TCP:plex:32400 & > /dev/null
@@ -33,6 +34,14 @@
   
 <br>
 <br>
+
+##### Plex 설정 필요
+
+만물이론님 제공
+
+<img src="https://cdn.discordapp.com/attachments/1039604290064482304/1050649730440515634/image.png" width=80%>
+
+<br><br>
 
 ### Plex Scanner
 
@@ -47,6 +56,8 @@
     ![](https://media.discordapp.net/attachments/631112094015815681/902642292748349460/unknown.png)
  
   * Plex Machind ID : 폴더테스트 버튼 클릭시 자동입력
+
+<br><br>
 
 ### 참고: 리눅스 plex:plex USER 사용시
 
@@ -85,6 +96,7 @@
 root가 su를 통해 plex user로 명령 실행.  
 이때 스캔되면서 생성되는 폴더 & 파일은 plex:plex 권한
 
+<br><br>
 
 ### 참고: Plex Media Scanner 명령
   plex:plex USER는 ```su - plex -c``` 명령 추가
