- 1.1.0 (2024.06.11)   스캔, 파일정리 점검

--- a/files/스캔.md
+++ b/files/스캔.md
@@ -1,12 +1,27 @@
-### ~~중요 : FF 도커 브릿지모드~~
-  ~~아래 `socat` 을 이용해도 스캔이 되지 않는 문제 확인를 확인하였다.~~  
-  ~~해결책을 당장 찾기 힘들어 스캔 기능을 이용하려면 FF 도커를 호스트 모드로 실행하길 권장한다.~~
-  ```
-  docker run -d --name ff --network=host  -v /root/docker/ff2:/data -v /:/host -v /mnt:/mnt --privileged flaskfarm/flaskfarm:4.0
-  ```
-  ~~`config.yaml` 파일에서 `port: 7777` 와 같이 원하는 포트를 지정하여 실행.~~
+### PLEX SCAN 모드
+```
+- MODE
+  - ADD
+  - REMOVE_FILE
+  - REMOVE_FOLDER
+  - REFRESH
+```
 
+----
 <br>
+
+### API
+```
+- /plex_mate/api/scan/do_scan   
+- parameter   
+  - target : 경로   
+  - mode: 기본 ADD (optional)   
+  - target_section_id : (optional)      
+  - callback_id : (optional)      
+  - callback_url : (optional)      
+```
+
+----
 <br>
 
 ### 중요 : FF 도커 네트워크 모드 브릿지 실행시
@@ -35,13 +50,6 @@
 <br>
 <br>
 
-##### Plex 설정 필요
-
-만물이론님 제공
-
-<img src="https://cdn.discordapp.com/attachments/1039604290064482304/1050649730440515634/image.png" width=80%>
-
-<br><br>
 
 ### Plex Scanner
 
@@ -103,18 +111,33 @@ root가 su를 통해 plex user로 명령 실행.
 
  
   * 스캔 - 섹션 전체   
-    `/usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --scan --refresh`
+    ```
+    /usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --scan --refresh
+    ```
 
   * 스캔 - 폴더  
-    `/usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --scan --refresh --directory /mnt/gds/영화/1.제목/가`
+    ```
+    /usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --scan --refresh --directory /mnt/gds/영화/1.제목/가
+    ```
 
   * 분석 - 섹션전체  
-    `/usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --analyze`
+    ```
+    /usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --analyze
+    ```
 
   * 분석 - 폴더  
-    `/usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --analyze --directory /mnt/gds/영화/1.제목/가`
+    ```
+    /usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --analyze --directory /mnt/gds/영화/1.제목/가
+    ```
 
-  * 분석 - 메타 키  
-    `/usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --analyze --item 366909`
+  * 분석 - 메타 키   
+    ```
+    /usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --analyze --item 366909   
+    ```   
+
+
+### 외부 API
+
+
 
 
