--- a/files/파일정리.md
+++ b/files/파일정리.md
@@ -59,7 +59,10 @@
   영화, 쇼 bundle은 포스터 URL이라도 있지만 시즌, 에피소드 번들은 쓰는 경우가 아예 없고 지워도 상관없다.
   비어 있는 폴더가 아주 많고 이 폴더를 지울 경우 상당한 용량을 확보할 수 있다.
 
+  ![Media 삭제]("https://i.imgur.com/zaqDP5W.png")
 
+  
+![]("https://i.imgur.com/zaqDP5W.png")
 ----
 ### 캐시(PhotoTranscoder) 삭제
   Plex는 모든 이미지 파일을 이 폴더안에 캐시로 만들어 사용하고 같은 이미지 파일이라도 클라이언트에 따라 여러 개를 만들어 사용한다.  
