--- a/files/스캔.md
+++ b/files/스캔.md
@@ -24,6 +24,22 @@
 ----
 <br>
 
+
+### rclone vfs/refresh 연동
+
+스캔 경로가 리모트에 매칭되면 rc addr에 호출하여 vfs/refresh를 수행한다.   
+_async=false 동기화 모드로 실행.   
+
+* ADD 일 경우 실행. recursive 옵션 주지 않음. (지정 리모트만 새로고침)   
+* 스캔 타겟에 해당하는 리모트의 parent를 dir로 지정.      
+* 일반적으로 OK를 리턴 받으나 file does not exist 를 받으면 상위 parent를 한번 더 실행.   
+  GDS의 경우라면 신규 프로그램 1회차 파일 추가시 프로그램 폴더도 없는 경우. 이런 경우 다음 턴에 스캔이 이루어짐.   
+* 파일시스템에서 확인이 이루어지고 폴더인 경우에 recursive=true 옵션으로 스캔 타겟에 해당하는 리모트를 추가 실행
+
+----
+<br>
+
+
 ### 중요 : FF 도커 네트워크 모드 브릿지 실행시
 ##### socat 세팅
   * 참고 : [데브닉스님 글](https://sjva.me/bbs/board.php?bo_table=tip&wr_id=8397)
@@ -134,10 +150,4 @@ root가 su를 통해 plex user로 명령 실행.
     ```
     /usr/lib/plexmediaserver/Plex\ Media\ Scanner --section 18 --analyze --item 366909   
     ```   
-
-
-### 외부 API
-
-
-
 
