매뉴얼 수정

--- a/files/스캔.md
+++ b/files/스캔.md
@@ -1,25 +1,19 @@
-### PLEX SCAN 모드
-```
+### PLEX SCAN
 - MODE
-  - ADD
-  - REMOVE_FILE
-  - REMOVE_FOLDER
-  - REFRESH
-```
+    - ADD
+    - REMOVE_FILE
+    - REMOVE_FOLDER
+    - REFRESH
+- API
+    * URL : /plex_mate/api/scan/do_scan   
+    * PARAM
+        - target : 경로   
+        - mode: 기본 ADD (optional)   
+        - target_section_id : (optional)      
+        - callback_id : (optional)      
+        - callback_url : (optional)     
+        - apikey : apikey (필수) 
 
-----
-<br>
-
-### API
-```
-- /plex_mate/api/scan/do_scan   
-- parameter   
-  - target : 경로   
-  - mode: 기본 ADD (optional)   
-  - target_section_id : (optional)      
-  - callback_id : (optional)      
-  - callback_url : (optional)      
-```
 
 ----
 <br>
