- 1.1.8 (2024.08.12)   라이브러리 복사2 추가.

--- a/files/라이브러리 복사2.md
+++ b/files/라이브러리 복사2.md
@@ -1,4 +1,6 @@
 ### 라이브러리 복사2
 
-- 라이브러리 미리 만들지 않음.
-- 복사 속도 개선을 위해 비교과정 생략.
+- 라이브러리 미리 만들지 않음.   
+- 반드시 PMS 중지 후 실행.   
+- 복사 속도 개선을 위해 비교 과정 생략.   
+
