--- a/files/라이브러리 주기적 스캔.md
+++ b/files/라이브러리 주기적 스캔.md
@@ -1,13 +1,125 @@
 ### 라이브러리 주기적 스캔
 
-섹션별, 또는 하위 폴더별로 주기적 스캔을 하는 기능이다
+섹션별, 또는 하위 폴더별로 주기적 스캔을 하는 기능입니다.
+
+### YAML 작업 편집
+
+작업은 `/data/db/plex_mate_config.yaml`에 아래처럼 정의 할 수 있습니다.
+```yaml
+라이브러리 주기적 스캔 목록:
+  - 섹션ID: 1
+    주기: 10
+    스케쥴링: 등록
+    스캔모드: 웹
+    최대실행시간: 120
+    폴더: /mnt/gds/GDRIVE/VIDEO/방송중/드라마
+    설명: '방송중 드라마를 스캔하는 작업'
+    새로고침:
+      하위폴더: true
+      비동기: true
+      스캔무시: false
+```
+
+### 사용가능한 키워드
+
+- 섹션ID: 플렉스 라이브러리 섹션ID 입니다. 스캔을 바이너리로 실행할 경우 필수로 입력해야 합니다.
+    - 가능한 값: 정수
+- 스케쥴링: 작업의 스케쥴링 여부를 설정합니다.
+    - 가능한 값: 등록 | 수동
+    - 생략시: 등록
+    - 등록: 주기적 스캔 모듈 로딩시 자동으로 스케쥴링 등록
+    - 수동: 자동 등록하지 않고 사용자가 직접 실행
+- 주기: 스케쥴링 주기를 설정합니다. 스케쥴링 항목이 "등록"인 경우에만 사용합니다.
+    - 가능한 값: 분 단위 정수 | CRON 표현식
+- 스캔모드: 스캔 방식을 설정합니다.
+    - 가능한 값: 웹 | 바이너리
+    - 생략시: 바이너리
+    - 웹: 플렉스 웹 API로 스캔을 요청합니다. 플렉스 서버의 큐에 추가되어 순차적으로 스캔이 실행됩니다.
+    - 바이너리: 직접 바이너리 스캐너를 실행합니다.
+- 최대실행시간: 바이너리 스캐너의 실행 시간이 이 시간을 초과하면 프로세스를 중단합니다. 생략시 중단하지 않습니다.
+    - 가능한 값: 분 단위 정수
+- 폴더: 스캔할 폴더를 지정합니다.
+    - 가능한 값: Flaskfarm에서 접근 가능한 경로
+    - 생략시: 섹션ID에서 지정한 라이브러리 전체를 대상으로 합니다.
+    - 폴더 지정시 라이브러리에 등록된 폴더이거나 그 하위 폴더여야 합니다. 등록된 폴더보다 상위 폴더면 스캔이 안 됩니다. 다만 스캔모드가 "웹"일 경우 상위 폴더를 지정하더라도 자동으로 하위 폴더를 선택합니다.
+- 설명: 목록에 표시되는 설명입니다. 생략 가능합니다.
+- 새로고침: vfs/refresh 실행 여부를 설정합니다.
+    - 비동기
+        - 가능한 값: true | false
+        - 생략시: false
+        - true: vfs/refresh 명령을 비동기로 실행합니다. (_async=true)
+        - false: vfs/refresh 명령을 동기로 실행됩니다. (_async=false)
+    - 하위폴더
+        - 가능한 값: true | false
+        - 생략시: false
+        - true: 모든 하위 폴더까지 새로고침 합니다. (recursive=true)
+        - false: 대상 폴더만 새로고침합니다. (recursive=false)
+    - 스캔무시
+        - 가능한 값: true | false
+        - 생략시: false
+        - true: 새로고침만 실행합니다.
+        - false: 새로고침 후 스캔을 실행합니다.
 
 
+### 작업 예시
 
-![](https://cdn.discordapp.com/attachments/631112094015815681/902644120697339914/unknown.png)
-
-
-![](https://media.discordapp.net/attachments/631112094015815681/902644410804731924/unknown.png)
-
-
-![](https://cdn.discordapp.com/attachments/631112094015815681/902644644213579776/unknown.png)
+```yaml
+라이브러리 주기적 스캔 목록:
+  - 섹션ID: 8
+    주기: 10
+    스케쥴링: 등록
+  - 섹션ID: 9
+    주기: 10
+    설명: 2.예능 - 9
+    스케쥴링: 등록
+  - 섹션ID: 11
+    주기: 15
+    설명: 3.교양 - 11
+  - 섹션ID: 12
+    주기: 5 * * * *
+    설명: 4.어린이 - 12
+  - 섹션ID: 13
+    주기: 10 * * * *
+    설명: 5.기타 - 13
+  - 섹션ID: 23
+    주기: 5
+    설명: "영화 최신 2021.10 폴더만"
+    폴더: "/mnt/gds/영화/4.최신/2021.10"
+  - 섹션ID: 18
+    주기: 0 5 * * *
+    스캔모드: 웹
+    설명: "영화 ALL - 하루에 한번"
+  - 섹션ID: 18
+    스케쥴링: 수동
+    설명: "영화 ALL / 수동용"
+  - 섹션ID: 41
+    주기: 3000
+    스케쥴링: 수동
+    스캔모드: 웹
+    설명: F.외국
+  - 설명: "매일 오전 10시 5분에 방송중 드라마를 새로고침 후 스캔"
+    섹션ID: 50
+    주기: "5 10 * * *"
+    폴더: "/mnt/gds/GDRIVE/VIDEO/방송중/드라마"
+    새로고침:
+      하위폴더: true
+  - 설명: "새로고침의 설정 값을 기본값으로 실행"
+    섹션ID: 51
+    주기: 600
+    새로고침:
+  - 설명: "새로고침후 스캔을 비동기로 실행"
+    스케쥴링: 수동
+    스캔모드: 웹
+    폴더: "/mnt/gds/GDRIVE/VIDEO/방송중/드라마"
+    새로고침:
+      하위폴더: true
+      비동기: true
+  - 설명: "새로고침만 실행"
+    스케쥴링: 등록
+    주기: "5 10 * * *"
+    폴더: "/mnt/gds/GDRIVE/VIDEO/영화/최신"
+    새로고침:
+      하위폴더: true
+      비동기: true
+      스캔무시: true
+```
