- 1.1.23 (2024.09.21)   주기적 스캔에 전체 라이브러리 스캔 추가

--- a/files/라이브러리 주기적 스캔.md
+++ b/files/라이브러리 주기적 스캔.md
@@ -23,7 +23,9 @@
 ### 사용가능한 키워드
 
 - 섹션ID: 플렉스 라이브러리 섹션ID 입니다. 스캔을 바이너리로 실행할 경우 필수로 입력해야 합니다.
-    - 가능한 값: 정수
+    - 가능한 값: 정수 | all
+    - 스캔모드가 '웹'일 경우 섹션ID에 'all'을 입력하면 전체 라이브러리를 스캔합니다.
+    - 전체 라이브러리 스캔은 작업 취소가 구현되지 않았으니 신중하게 사용하세요.
 - 스케쥴링: 작업의 스케쥴링 여부를 설정합니다.
     - 가능한 값: 등록 | 수동
     - 생략시: 등록
@@ -122,4 +124,10 @@
       하위폴더: true
       비동기: true
       스캔무시: true
+  - 설명: "전체 라이브러리 스캔"
+    섹션ID: all
+    스캔모드: 웹
+    스케쥴링: 수동
+    새로고침:
+      하위폴더: true
 ```
