- 1.2.30 (2025.09.23)     - 주기적 스캔: 기준경로(anchor) 옵션 추가     - DB 툴: 휴지통 표시 제거에 영화 타입의 섹션 포함

--- a/files/라이브러리 주기적 스캔.md
+++ b/files/라이브러리 주기적 스캔.md
@@ -18,6 +18,9 @@
       하위폴더: true
       비동기: true
       스캔무시: false
+    기준경로:
+      - /mnt/gds/GDRIVE/VIDEO/방송중
+      - /mnt/gds/GDRIVE/VIDEO/영화
 ```
 
 ### 사용가능한 키워드
@@ -61,6 +64,7 @@
         - 생략시: false
         - true: 새로고침만 실행합니다.
         - false: 새로고침 후 스캔을 실행합니다.
+- 기준경로: 지정한 경로가 존재하지 않으면 작업을 실행하지 않습니다. 경로 존재 여부는 플렉스 서버에 요청해서 판단하기 때문에 플렉스 서버에서 사용하는 경로를 입력해야 합니다. 여러 경로는 리스트 형식으로 입력하고 모든 경로가 존재해야 작업이 실행됩니다.
 
 
 ### 작업 예시
@@ -116,6 +120,7 @@
     새로고침:
       하위폴더: true
       비동기: true
+    기준경로: /mnt/gds/GDRIVE/VIDEO/방송중
   - 설명: "새로고침만 실행"
     스케쥴링: 등록
     주기: "5 10 * * *"
@@ -130,4 +135,8 @@
     스케쥴링: 수동
     새로고침:
       하위폴더: true
+    기준경로:
+      - /mnt/gds/GDRIVE/VIDEO/영화
+      - /mnt/gds/GDRIVE/VIDEO/방송중
+      - /mnt/gds/GDRIVE/VIDEO/국내TV
 ```
