- fix: 영화 기본 에이전트 파일정리 수정 - fix: remove_orphans 기본값(false) 설정

--- a/files/파일정리.md
+++ b/files/파일정리.md
@@ -99,8 +99,9 @@ def run(*args, **kwargs):
 
     # 쇼 정리
     page_show = module.get_page('show')
-    page_show.task_interface('start4', '8', 'false').join()
-    page_show.task_interface('start4', '9', 'false').join()
+    # 단계, 섹션 ID, drytun, remove orphans
+    page_show.task_interface('start4', '8', 'false', 'true').join()
+    page_show.task_interface('start4', '9', 'false', 'true').join()
     
     # 번들 정리
     page_bundle = module.get_page('bundle')
